--- a/packages/SettingsLib/res/values/arrays.xml
+++ b/packages/SettingsLib/res/values/arrays.xml
@@ -499,16 +499,14 @@
 
     <!-- Titles for debug renderer preference. [CHAR LIMIT=50] -->
     <string-array name="debug_hw_renderer_entries">
-        <item>OpenGL (Skia) (Default)</item>
-        <item>Vulkan (Skia)</item>
-        <item>OpenGL</item>
+        <item>OpenGL (Default)</item>
+        <item>OpenGL (Skia)</item>
     </string-array>
 
     <!-- Values for debug renderer preference. -->
     <string-array name="debug_hw_renderer_values" translatable="false" >
-        <item>skiagl</item>
-        <item>skiavk</item>
         <item>opengl</item>
+        <item>skiagl</item>
     </string-array>
 
     <!-- Titles for app process limit preference. [CHAR LIMIT=35] -->
