SystemUI: FOD: Use custom Bottom Area View for keyguard message
Dreaming and Pulsing are not concerned

Change-Id: I5ef1e6502a97589efcf40ab17c3f4dc21a1405d4
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/packages/SystemUI/res/values/attrs.xml
+++ b/packages/SystemUI/res/values/attrs.xml
@@ -161,5 +161,10 @@
         <attr name="android:dialogCornerRadius" />
     </declare-styleable>
 
+     <!-- Padding needed on bottom of lockscreen for FoD devices -->
+    <dimen name="op_keyguard_indication_margin_bottom">415.0px</dimen>
+
+
+
 </resources>
 
