--- a/packages/SystemUI/res/values/stag_attrs.xml
+++ b/packages/SystemUI/res/values/stag_attrs.xml
@@ -18,5 +18,9 @@
     <declare-styleable name="BatteryBarController">
         <attr name="viewLocation" format="integer" />
     </declare-styleable>
+    
+    <!-- Padding needed on bottom of lockscreen for FoD devices -->
+    <dimen name="op_keyguard_indication_margin_bottom">415.0px</dimen>
+
 </resources>
 
