--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -3861,5 +3861,11 @@
   <!-- For Pdn throttle feature -->
   <java-symbol type="bool" name="config_pdp_retry_for_29_33_55_enabled" />
 
+
   <java-symbol type="bool" name="reset_geo_fencing_check_after_boot_or_apm" />
+
+  <!-- Whether to use scaled brightness (set -1 to disable) -->
+  <java-symbol type="integer" name="config_useScaleBrightness" />
+
+
 </resources>
