--- a/core/res/res/values/stag_config.xml
+++ b/core/res/res/values/stag_config.xml
@@ -165,8 +165,10 @@
     <!-- -1 means use same as config_screenBrightnessDoze -->
     <integer name="config_screenBrightnessPulse">-1</integer>
 
+
     <!-- Whether or not we should show vendor mismatch message -->
     <bool name="config_show_vendor_mismatch_message">true</bool>
     
-    
+
+     <bool name="config_has_Soli">false</bool>
 </resources>
