--- a/packages/SystemUI/res/values/stag_strings.xml
+++ b/packages/SystemUI/res/values/stag_strings.xml
@@ -94,8 +94,13 @@
     <string name="quick_settings_location_detail_mode_battery_saving_description">Use Wi\u2011Fi, Bluetooth, or cellular networks to determine location</string>
     <string name="quick_settings_location_detail_mode_sensors_only_description">Use GPS to determine your location</string>
 
+
     <string name="lockscreen_default">Default</string>
     <string name="lockscreen_hidden">None</string>
+
+    <!-- Name of the status bar icon. -->
+    <string name="status_bar_data_disabled">Crosses when data is disabled</string>
+
 
     <!-- Shows when people have clicked on the custom lockscreen shortcut [CHAR LIMIT=60] -->
     <string name="custom_hint">Swipe from icon to launch</string>
