FODCircleView: dispatch onPress to HAL only after dimming is applied
Change-Id: Iecdbe3bb38f003f5a7cda86b6bf3082691fd33f5

--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -211,4 +211,6 @@
 
     <color name="volume_dialog_bottom_tint">#0D000000</color>
 
+    <color name="config_fodColorBackground">#20000000</color>
+
 </resources>
