--- a/packages/SystemUI/res/layout/global_screenshot.xml
+++ b/packages/SystemUI/res/layout/global_screenshot.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2011 The Android Open Source Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -41,13 +38,10 @@
         android:pointerIcon="crosshair">
         <LinearLayout
             android:id="@+id/global_screenshot_buttons"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:gravity="center"
-            android:paddingBottom="24dp"
-            android:paddingTop="24dp"
-            android:background="@color/screenshot_partial_layout_background"
+            android:layout_marginBottom="24dp"
             android:animateLayoutChanges="true">
             <ImageView
                 android:id="@+id/global_screenshot_selector_capture"
