SystemUI: Redesign volume dialog
Inspiration from MiUI, iOS and Dil3mm4

Change-Id: I8bddda04c83c995bec82e9493017db69bd460b34
Co-Authored-By: Andrew Fluck <andrew@aospa.co>
Co-Authored-By: rituj <ritujbeniwal@gmail.com>
Co-Authored-By: Jyotiraditya <jyotiraditya@aospa.co>
Co-Authored-By: Akash Srivastava <akashsrivastava@aospa.co>
Co-Authored-By: 00day0 <therandomuser11@gmail.com>
Signed-off-by: rituj <ritujbeniwal@gmail.com>
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -213,4 +213,5 @@
 
     <color name="config_fodColorBackground">#20000000</color>
 
+    <color name="divider_stroke_color">#E0E0E0</color>
 </resources>
