--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -88,4 +88,8 @@
     <color name="recents_dismiss_all_background_color">#141414</color>
     <color name="recents_dismiss_all_icon_color">@android:color/white</color>
 
+    <color name="volume_background_tint">#141414</color>
+
+    <color name="divider_stroke_color">#434343</color>
+
 </resources>
