--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -66,13 +66,14 @@
     <dimen name="status_bar_horizontal_padding">2.5dp</dimen>
 
     <!-- Height of the battery icon in the status bar. -->
-    <dimen name="status_bar_battery_icon_height">13.0dp</dimen>
-
-    <!-- Width of the battery icon in the status bar. -->
-    <dimen name="status_bar_battery_icon_width">15.0dp</dimen>
+    <dimen name="status_bar_battery_icon_height">12.0dp</dimen>
 
     <!-- Width of the battery icon in the status bar when set to circle style. -->
     <dimen name="status_bar_battery_icon_circle_width">14.5dp</dimen>
+
+    <!-- Width of the battery icon in the status bar. The battery drawable assumes a 12x20 canvas,
+    so the width of the icon should be 13.0dp * (12.0 / 20.0) -->
+    <dimen name="status_bar_battery_icon_width">7.2dp</dimen>
 
     <!-- The font size for the clock in the status bar. -->
     <dimen name="status_bar_clock_size">14sp</dimen>
@@ -346,7 +347,7 @@
     <dimen name="qs_header_system_icons_area_height">48dp</dimen>
 
     <!-- How far the quick-quick settings panel extends below the status bar -->
-    <dimen name="qs_quick_header_panel_height">128dp</dimen>
+    <dimen name="qs_quick_header_panel_height">140dp</dimen>
 
     <!-- The height of the container that holds the system icons in the quick settings header in the
          car setting. -->
@@ -396,38 +397,22 @@
     <!-- The width of the panel that holds the quick settings. -->
     <dimen name="qs_panel_width">@dimen/notification_panel_width</dimen>
 
-    <dimen name="volume_dialog_panel_transparent_padding_right">4dp</dimen>
-
+    <dimen name="volume_dialog_panel_transparent_padding_left_right">8dp</dimen>
     <dimen name="volume_dialog_panel_transparent_padding">20dp</dimen>
-
-    <dimen name="volume_dialog_stream_padding">8dp</dimen>
-
-    <dimen name="volume_dialog_panel_width">64dp</dimen>
-
-    <dimen name="volume_dialog_slider_height">116dp</dimen>
-
-    <dimen name="volume_dialog_ringer_size">64dp</dimen>
-
-    <dimen name="volume_dialog_ringer_icon_padding">20dp</dimen>
-
-    <dimen name="volume_dialog_caption_size">64dp</dimen>
-
-    <dimen name="volume_dialog_tap_target_size">48dp</dimen>
-
+    <dimen name="volume_dialog_panel_width">58dp</dimen>
+    <dimen name="volume_dialog_slider_height">210dp</dimen>
+    <dimen name="volume_dialog_icon_padding">14dp</dimen>
+    <dimen name="volume_dialog_tap_target_size">@dimen/volume_dialog_panel_width</dimen>
     <dimen name="volume_dialog_spacer">4dp</dimen>
-
-    <dimen name="volume_dialog_slider_margin_top">14dp</dimen>
-
-    <dimen name="volume_dialog_slider_margin_bottom">-2dp</dimen>
-
-    <dimen name="volume_dialog_row_margin_bottom">8dp</dimen>
-
+    <dimen name="volume_dialog_button_height">45dp</dimen>
+    <dimen name="volume_dialog_row_icon_size">24dp</dimen>
+    <dimen name="volume_dialog_row_spacer">@dimen/volume_dialog_spacer</dimen>
     <dimen name="volume_dialog_elevation">9dp</dimen>
 
-    <dimen name="volume_tool_tip_right_margin">76dp</dimen>
-
-    <dimen name="volume_tool_tip_bottom_margin">32dp</dimen>
-
+    <dimen name="volume_tool_tip_arrow_height">8dp</dimen>
+    <dimen name="volume_tool_tip_arrow_width">10dp</dimen>
+    <dimen name="volume_tool_tip_arrow_margin_container">-2dp</dimen>
+    <dimen name="volume_tool_tip_arrow_margin_start">24dp</dimen>
     <dimen name="volume_tool_tip_arrow_corner_radius">2dp</dimen>
 
     <!-- Gravity for the notification panel -->
@@ -450,8 +435,8 @@
 
     <dimen name="qs_tile_height">106dp</dimen>
     <dimen name="qs_tile_layout_margin_side">6dp</dimen>
-    <dimen name="qs_tile_margin_horizontal">18dp</dimen>
-    <dimen name="qs_tile_margin_vertical">24dp</dimen>
+    <dimen name="qs_tile_margin_horizontal">10dp</dimen>
+    <dimen name="qs_tile_margin_vertical">16dp</dimen>
     <dimen name="qs_tile_margin_top_bottom">12dp</dimen>
     <dimen name="qs_tile_margin_top_bottom_negative">-12dp</dimen>
     <!-- The height of the qs customize header. Should be
@@ -459,15 +444,15 @@
          (Toolbar_minWidth (56dp) + qs_tile_margin_top_bottom (12dp))
     -->
     <dimen name="qs_customize_header_min_height">46dp</dimen>
-    <dimen name="qs_tile_margin_top">18dp</dimen>
+    <dimen name="qs_tile_margin_top">14dp</dimen>
     <dimen name="qs_tile_background_size">44dp</dimen>
-    <dimen name="qs_quick_tile_size">48dp</dimen>
-    <dimen name="qs_quick_tile_padding">12dp</dimen>
+    <dimen name="qs_quick_tile_size">52dp</dimen>
+    <dimen name="qs_quick_tile_padding">16dp</dimen>
     <dimen name="qs_header_gear_translation">16dp</dimen>
     <dimen name="qs_header_tile_margin_horizontal">4dp</dimen>
     <dimen name="qs_page_indicator_width">16dp</dimen>
     <dimen name="qs_page_indicator_height">8dp</dimen>
-    <dimen name="qs_tile_icon_size">24dp</dimen>
+    <dimen name="qs_tile_icon_size">23dp</dimen>
     <dimen name="qs_tile_text_size">12sp</dimen>
     <dimen name="qs_tile_divider_height">1dp</dimen>
     <dimen name="qs_panel_padding">16dp</dimen>
@@ -503,7 +488,7 @@
     <dimen name="qs_detail_item_icon_width">32dp</dimen>
     <dimen name="qs_detail_item_icon_marginStart">0dp</dimen>
     <dimen name="qs_detail_item_icon_marginEnd">20dp</dimen>
-    <dimen name="qs_header_tooltip_height">48dp</dimen>
+    <dimen name="qs_header_tooltip_height">40dp</dimen>
     <dimen name="qs_header_alarm_icon_size">@dimen/status_bar_icon_drawing_size</dimen>
     <dimen name="qs_header_mobile_icon_size">@dimen/status_bar_icon_drawing_size</dimen>
     <dimen name="qs_header_alarm_text_margin_start">6dp</dimen>
@@ -538,8 +523,8 @@
     <!-- Padding between subtitles and the following text in the QSFooter dialog -->
     <dimen name="qs_footer_dialog_subtitle_padding">20dp</dimen>
 
-    <dimen name="seek_bar_height">4dp</dimen>
-    <dimen name="seek_bar_corner_radius">4dp</dimen>
+    <dimen name="seek_bar_height">3dp</dimen>
+    <dimen name="seek_bar_corner_radius">3dp</dimen>
 
     <!-- Zen mode panel: condition item button padding -->
     <dimen name="zen_mode_condition_detail_button_padding">8dp</dimen>
@@ -713,7 +698,7 @@
     <!-- The top padding of the clear all button -->
     <dimen name="clear_all_padding_top">12dp</dimen>
 
-    <dimen name="notification_section_header_height">48dp</dimen>
+    <dimen name="notification_section_header_height">32dp</dimen>
     <dimen name="notification_section_header_padding_left">16dp</dimen>
 
     <!-- Largest size an avatar might need to be drawn in the user picker, status bar, or
@@ -761,6 +746,8 @@
     <!-- The width/height of the phone/camera icon view on keyguard. -->
     <dimen name="keyguard_affordance_height">56dp</dimen>
     <dimen name="keyguard_affordance_width">56dp</dimen>
+    <dimen name="keyguard_affordance_padding">10dp</dimen>
+    <dimen name="keyguard_affordance_margin">15dp</dimen>
 
     <!-- The width/height of the unlock icon view on keyguard. -->
     <dimen name="keyguard_lock_height">42dp</dimen>
@@ -983,6 +970,7 @@
     <dimen name="edge_margin">8dp</dimen>
 
     <dimen name="rounded_corner_content_padding">0dp</dimen>
+    <dimen name="qs_corner_content_padding">8dp</dimen>
     <dimen name="nav_content_padding">0dp</dimen>
     <dimen name="nav_quick_scrub_track_edge_padding">24dp</dimen>
     <dimen name="nav_quick_scrub_track_thickness">10dp</dimen>
@@ -1092,9 +1080,9 @@
     <!-- Side padding between background of Ongoing App Ops chip and content -->
     <dimen name="ongoing_appops_chip_side_padding">8dp</dimen>
     <!-- Margin between icons of Ongoing App Ops chip when QQS-->
-    <dimen name="ongoing_appops_chip_icon_margin_collapsed">0dp</dimen>
+    <dimen name="ongoing_appops_chip_icon_margin_collapsed">3dp</dimen>
     <!-- Margin between icons of Ongoing App Ops chip when QS-->
-    <dimen name="ongoing_appops_chip_icon_margin_expanded">2dp</dimen>
+    <dimen name="ongoing_appops_chip_icon_margin_expanded">3dp</dimen>
     <!-- Icon size of Ongoing App Ops chip -->
     <dimen name="ongoing_appops_chip_icon_size">@dimen/status_bar_icon_drawing_size</dimen>
     <!-- Radius of Ongoing App Ops chip corners -->
@@ -1168,6 +1156,11 @@
     <!-- Size of the RAT type for CellularTile -->
     <dimen name="celltile_rat_type_size">10sp</dimen>
 
-    <dimen name="fod_animation_size">280dp</dimen>
+    <dimen name="dismiss_all_button_elevation">10dp</dimen>
+    <dimen name="dismiss_all_button_height">55dp</dimen>
+    <dimen name="dismiss_all_button_margin_bottom">35dp</dimen>
+    <dimen name="dismiss_all_button_margin_top">30dp</dimen>
+    <dimen name="dismiss_all_button_width">55dp</dimen>
+    <dimen name="dismiss_all_fab_src_size">24dp</dimen>
 
 </resources>
