--- a/packages/SystemUI/res/values/stag_dimens.xml
+++ b/packages/SystemUI/res/values/stag_dimens.xml
@@ -56,4 +56,10 @@
     <!-- Qs visibility -->
     <dimen name="qs_tile_height_wo_label">64dp</dimen>
 
+    <!-- Volume panel -->
+    <dimen name="volume_dialog_panel_transparent_padding_left">20dp</dimen>
+
+    <!-- Smartspace -->
+    <dimen name="smartspace_icon_shadow">1dp</dimen>
+
 </resources>
