--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4313,5 +4313,9 @@
     
     <integer name="config_deviceHardwareWakeKeys">64</integer>
 
+    <!-- Timeout in MS for how long you have to long-press the back key to
+         kill the foreground app. -->
+    <integer name="config_backKillTimeout">1500</integer>
+
 
 </resources>
