--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1,3 +1,4 @@
+
  <!--
 /* Copyright 2012, The Android Open Source Project
 **
@@ -3882,5 +3883,10 @@
   <java-symbol type="bool" name="config_sms_authorization_enabled" />
   
   <java-symbol type="integer" name="config_deviceHardwareWakeKeys" />
+
+  <!-- kill app long press back -->
+  <java-symbol type="string" name="app_killed_message" />
+  <java-symbol type="integer" name="config_backKillTimeout" />
+
 
 </resources>
