Mods for last commits

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4310,6 +4310,8 @@
 
     <!-- Enable sms authorization framework-->
     <bool name="config_sms_authorization_enabled">false</bool>
+    
+    <integer name="config_deviceHardwareWakeKeys">64</integer>
 
 
 </resources>
