--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -3880,5 +3880,7 @@
 
   <java-symbol type="integer" name="config_sms_authorization_timeout_ms" />
   <java-symbol type="bool" name="config_sms_authorization_enabled" />
+  
+  <java-symbol type="integer" name="config_deviceHardwareWakeKeys" />
 
 </resources>
