--- a/core/res/res/values/stag_symbols.xml
+++ b/core/res/res/values/stag_symbols.xml
@@ -73,7 +73,9 @@
 	
   <!-- Whether to show a custom view for FOD -->
   <java-symbol type="bool" name="config_needCustomFODView" />
-
+  
+  <java-symbol type="bool" name="config_supportsInDisplayFingerprint" />
+  
   <!-- Whether device supports an alt. ambient display -->
   <java-symbol type="bool" name="config_alt_ambient_display"/>
 
