SystemUI: Allow listening for face only on pin/pass view
Useful for devices with popup camera

Change-Id: Ifba770dd1681858844d5d0290cbf385bfa47f841

--- a/packages/SystemUI/res/values/stag_config.xml
+++ b/packages/SystemUI/res/values/stag_config.xml
@@ -39,6 +39,7 @@
     <string name="config_fpsInfoSysNode" translatable="false"></string>
 
 
+
     <!-- The CPUs to display in CPUInfoService view -->
     <string name="config_displayCpus" translatable="false"></string>
 
@@ -50,4 +51,8 @@
     <bool name="config_biometricHelpShowOnlyWhenFailed">false</bool>
 
 
+
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">true</bool>
+    
 </resources>
