--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4316,6 +4316,9 @@
     <!-- Timeout in MS for how long you have to long-press the back key to
          kill the foreground app. -->
     <integer name="config_backKillTimeout">1500</integer>
-
+    
+    
+ <!-- Component name of popup camera service -->
+    <string name="config_popUpCameraServiceComponentName" translatable="false"></string>
 
 </resources>
