--- a/packages/SystemUI/res/values/stag_colors.xml
+++ b/packages/SystemUI/res/values/stag_colors.xml
@@ -27,6 +27,7 @@
     <color name="screenshot_partial_layout_background">#20000000</color>
     <color name="screenshot_partial_capture_background">@*android:color/accent_device_default_light</color>
     <color name="screenshot_partial_cancel_background">#a0000000</color>
+    <color name="screenshot_partial_selector_background">#A0000000</color>
 
     <!-- Color for the Assistant invocation lights -->
     <color name="edge_light_blue">#4185f4</color>
