--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4320,5 +4320,9 @@
     
  <!-- Component name of popup camera service -->
     <string name="config_popUpCameraServiceComponentName" translatable="false"></string>
+    
+    
+    <!-- Whether to turn on the notification light when the state of the front camera changes -->
+    <bool name="config_popUpNotificationLight">false</bool>
 
 </resources>
