Implement R style notification section headers

--- a/packages/SystemUI/res/values/stag_strings.xml
+++ b/packages/SystemUI/res/values/stag_strings.xml
@@ -195,4 +195,9 @@
     <string name="horns_label">Horns</string>
 
     <string name="usage_data">used</string>
+    
+        <!-- Alerting notification header label -->
+    <string name="notification_section_header_alerting">Alerting notifications</string>
+
+
 </resources>
