--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4324,5 +4324,7 @@
     
     <!-- Whether to turn on the notification light when the state of the front camera changes -->
     <bool name="config_popUpNotificationLight">false</bool>
+    
+     <bool name="config_allowMediaUidForCameraServiceProxy">false</bool>
 
 </resources>
