VolumeDialog: Tint slider and icon to gradient
ref: https://github.com/Project-Xtended/frameworks_base/commit/4730ba27820eec7d3c932fc90201b5dcb6b468f1

Change-Id: Ibf54122d2f7e6c6f9472c789015da3923cd68bdc

--- a/packages/SystemUI/res/layout/volume_dialog_row.xml
+++ b/packages/SystemUI/res/layout/volume_dialog_row.xml
@@ -59,7 +59,7 @@
                 android:layoutDirection="ltr"
                 android:scaleType="fitCenter"
                 android:soundEffectsEnabled="false"
-                android:tint="?android:attr/colorAccent" />
+                android:tint="@*android:color/gradient_end" />
 
             <com.android.systemui.statusbar.AlphaOptimizedTextView
                 android:id="@+id/volume_row_header"
@@ -73,7 +73,7 @@
                 android:maxLength="10"
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.Volume.Header"
-                android:textColor="?android:attr/colorAccent"
+                android:textColor="@*android:color/gradient_end"
                 android:textStyle="bold" />
         </LinearLayout>
     </FrameLayout>
